2008-04-09  Dan Williams  <dcbw@redhat.com>

	* src/vpn-password-dialog.c
	  src/vpn-password-dialog.h
		- (nma_vpn_request_password): pass the VPN connection ID to the auth
			dialog too because that's needed to get keyring items in some cases

	* src/applet.c
		- (applet_settings_new_secrets_requested_cb): pass the exported
			connection so that the connection's ID can be found

2008-04-09  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
		- (get_next_available_name): get the next available connection name
			that's not taken
		- (create_new_connection_for_type): create a new connection for a
			specific device type
		- (add_connection_cb): get a new connection for the device type that
			this add button handles
		- (new_connection_list, init_connection_lists): tag connection lists
			with their device type

2008-04-09  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-wireless.c
		- (populate_ui): don't puke on blank SSID, like when adding a new
			connection

2008-04-09  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/page-dsl.c: Finish the implemention to load, validate,
	and save.

	* src/connection-editor/ce-page-dsl.glade: Add "Show Password" checkbox.
	Remove "invisible_char" properties.

2008-04-09  Tambet Ingo  <tambet@gmail.com>

	* src/gconf-helpers/gconf-helpers.c
	(nm_gconf_set_uint_array_helper): Implement.
	(nm_gconf_get_uint_array_helper): Implement.
	(read_one_setting_value_from_gconf): Handle DBUS_TYPE_G_UINT_ARRAY.
	(copy_one_setting_value_to_gconf): Ditto.
	(nm_gconf_set_stringlist_helper): Don't ignore NULL lists, it's an empty list
	and without this change, it was not possible to reset string list values.

	* src/connection-editor/page-ip4.c: Finish the implemention to load, validate,
	and save.

	* src/connection-editor/ce-page-ip4.glade: Replace the "Manual" checkbox with
	combo box to allow selecting "DHCP", "Auto IP", and "Manual".
