@@ -1,3 +1,7 @@
+2008-04-10  Tambet Ingo  <tambet@gmail.com>
+
+	* src/connection-editor/page-wired.c: Another day, another page.
+
 2008-04-09  Dan Williams  <dcbw@redhat.com>
 
 	* src/vpn-password-dialog.c
